[package]
name = "pyconcord"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = "2018"

[lib]
name = "pyconcord"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.12"
ndarray = "0.13"
sprs = "0.9.3"

[dependencies.pyo3]
version = "0.12"
features = ["extension-module"]